--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@
   text-align: center;
   padding-left: 1.5rem;
 }
-.header button {
+.header button#darkModeToggle {
   justify-self: flex-end;
   justify-content: flex-end;
   outline: none;
@@ -52,6 +52,7 @@
 .header svg {
   height: 1.5rem;
   justify-self: end;
+  padding-right: 20px;
 }
 .header svg path {
   fill: var(--secondary);
@@ -61,15 +62,23 @@
   .header {
     grid-template-columns: 1fr 10fr 1fr;
   }
-  .header .menu {
-    display: grid;
+  .header button.menu {
+    display: block;
+    outline: none;
+    background-color: var(--primary);
+    border: none;
+    cursor: pointer;
   }
-  .header .menu svg {
-    height: 1.5rem;
+  .header button.menu svg {
+    display: block;
+    width: 4rem;
     justify-self: center;
-  }
-  .header .menu svg path {
     stroke: var(--secondary);
+    padding-left: 20px;
+  }
+  .header button.menu svg path {
+    stroke: var(--secondary);
+    fill: var(--secondary);
   }
 }
 .content {
